Corrigido erro no json devido ao encode em alguns usuários, adicionado link mailTo para enviar Email para professores (falta popular json com os emails)

--- a/fonte/coruja/meu_coruja/manifest.json
+++ b/fonte/coruja/meu_coruja/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Meu Coruja",
   "name": "App Meu Coruja da FAETERJ-RIO",
   "display": "standalone",
-  "orientation": "portrait",
+  "orientation": "landscape",
   "start_url": "index.html?launcher=true",
   "icons": [{
     "src": "img/icone_teste.png",
